# advent-of-code

./: README.md
2023/: flake.nix
2023/01/: a.out  main.cpp
2023/src/01/: main.cpp
2023/src/02/: main.cpp
2023/src/03/: main.cpp
2025/: CMakeLists.txt  flake.nix
2025/src/00/: main.cpp
2025/src/01/: main.cpp
2025/src/02/: main.cpp
2025/src/03/: main.cpp
2025/src/04/: main.cpp
2025/src/05/: main.cpp
2025/src/06/: main.cpp
2025/src/07/: main.cpp
2025/src/08/: main.cpp
2025/src/09/: main.cpp
2025/src/10/: main.cpp
2025/src/11/: main.cpp
2025/src/12/: main.cpp
